added contact feature

--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meatballz</title>
+        <title>Document</title>
     </head>
     <body>
         <h1>
-            Meatballz
+            Contact
         </h1>
-        <a href="contact.html">
-            ga naar contact page
-        </a>
     </body>
 </html>
